syntax = "proto3";

package vixen.parser;

import "solana-token/accounts.proto";
import "solana-token/ixs.proto";
import "solana-token/extensions.proto";
import "orca.proto";
import "raydium.proto";


/// Token Program

// Token Program State
message TokenProgramStateProto {
  oneof state_oneof {
    TokenAccountProto token_account = 1;
    MintProto mint = 2;
    MultisigProto multisig = 3;
  }
}

// Token Program Instructions
message TokenProgramIxProto {
  oneof ix_oneof {
    TransferIxProto transfer = 1;
    InitializeMintIxProto initialize_mint = 2;
    InitializeAccountIxProto initialize_account = 3;
    InitializeAccount2IxProto initialize_account2 = 4;
    InitializeAccount3IxProto initialize_account3 = 5;
    InitializeMultisigIxProto initialize_multisig = 6;
    ApproveIxProto approve = 7;
    RevokeIxProto revoke = 8;
    SetAuthorityIxProto set_authority = 9;
    MintToIxProto mint_to = 10;
    BurnIxProto burn = 11;
    CloseAccountIxProto close_account = 12;
    FreezeAccountIxProto freeze_account = 13;
    ThawAccountIxProto thaw_account = 14;
    TransferCheckedIxProto transfer_checked = 15;
    ApproveCheckedIxProto approve_checked = 16;
    MintToCheckedIxProto mint_to_checked = 17;
    BurnCheckedIxProto burn_checked = 18;
    SyncNativeIxProto sync_native = 19;
    GetAccountDataSizeIxProto get_account_data_size = 20;
    InitializeImmutableOwnerIxProto initialize_immutable_owner = 21;
    AmountToUiAmountIxProto amount_to_ui_amount = 22;
    UiAmountToAmountIxProto ui_amount_to_amount = 23;
  }
}

/// Token Extension

// Token Extension State
message TokenExtensionStateProto {
  oneof state_oneof {
    ExtendedTokenAccountProto extended_token_account = 1;
    ExtendedMintProto extended_mint_account = 2;
    MultisigProto multisig = 3;

  }
}

// Token Extension Instructions
message TokenExtensionProgramIxProto {
  oneof ix_oneof {
    TokenProgramIxProto token_program_ix = 1;
    TransferFeeIxProto transfer_fee_ix = 2;
    TokenMetadataIxProto token_metadata_ix = 3;
    TokenGroupIxProto token_group_ix = 4;
    ConfidentialTransferExtIxProto confidential_transfer_ix = 5;
    ConfidentialTransferFeeIxProto confidential_transfer_fee_ix = 6;
    CpiGuardIxProto cpi_guard_ix = 7;
    TransferHookIxProto transfer_hook_ix = 8;
    MetadataPointerIxProto metadata_pointer_ix = 9;
    MemoTransferIxProto memo_transfer_ix = 10;
    InterestBearingMintIxProto interest_bearing_mint_ix = 11;
    DefaultAccountStateIxProto default_account_state_ix = 12;
    GroupMemberPointerIxProto group_member_pointer_ix = 13;
    GroupPointerIxProto group_pointer_ix = 14;
    WithdrawExcessLamportsIxProto withdraw_excess_lamports_ix = 15;
    InitializePermanentDelegateIxProto initialize_permanent_delegate_ix = 16;
    ReallocateIxProto reallocate_ix = 17;
    InitializeNonTransferableMintIxProto initialize_non_transferable_mint_ix = 18;
    InitializeMintCloseAuthorityIxProto initialize_mint_close_authority_ix = 19;
    CreateNativeMintIxProto create_native_mint_ix = 20;
    SetAuthorityIxProto set_authority = 21;
  }
}

/// Orca Program

// Orca Program State
message OrcaProgramStateProto{
  oneof state_oneof {
    WhirlpoolProto whirlpool = 1;
    WhirlpoolsConfigProto whirlpools_config = 2;
    FeeTierProto fee_tier = 3;
    PositionProto position = 4;
    OrcaTickArrayProto tick_array = 5;
  }
}

// Orca Program Instructions
message OrcaProgramIxProto {
  oneof ix_oneof {
    OrcaSwapInstructionProto swap = 1;
    OrcaSwapV2InstructionProto swap_v2 = 2;
  }
}


/// Raydium Program

// Raydium Program State
message RaydiumProgramStateProto {
  oneof state_oneof {
    AmmConfigProto amm_config = 1;
    OperationStateProto operation_state = 2;
    ObservationStateProto observation_state = 3;
    PersonalPositionStateProto personal_position_state = 4;
    PoolStateProto pool_state = 5;
    ProtocolPositionStateProto protocol_position_state = 6;
    RaydiumTickArrayStateProto tick_array_state = 7;
    TickArrayBitmapExtensionProto tick_array_bitmap_extension = 8;
  }
}

// Raydium Program Instructions
message RaydiumProgramIxProto {
    oneof ix_oneof {
      RaydiumSwapInstructionProto swap = 1;
      RaydiumSwapV2InstructionProto swap_v2 = 2;
    }
}